--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
         
       - name: Test GH_PAT secret
         run: |
-          if [ -z "${{ secrets.GH_PAT }}" ]; then
+          if [ -z "${{ secrets.GITHUB_TOKEN }}" ]; then
            echo "GH_PAT is not set!"
            exit 1
           else
@@ -37,5 +37,5 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GH_PAT }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: build/web
